# MSc_Project

./: .gitattributes  .gitignore  README.md  pip_requirements.txt  requirements.txt  setup.cfg
debug/: read_write_detection.sh
files/: background_knowledge.txt  background_knowledge_old.txt  pRespondsToS.txt  patterns.txt  temp_asp_for_latex.txt
input-files/: minepump_mot_ex_auto_trace.txt
input-files/examples/: genbuf_05.spectra  (+24 more)
output-files/: Arbiter_edited.answer_set  Arbiter_raw.answer_set  revised-doorexample.spectra  revised-forklift2.spectra  test_out.pylasp  traffic.ilasp_out  traffic_for_strengthen.ilasp_out  traffic_for_strengthen_A_only.ground  traffic_for_strengthen_A_only_formula.csv  traffic_for_strengthen_formula.csv  traffic_formula.csv  traffic_guarantee_has_disjuncts.ground  traffic_guarantee_weaken.answer_set  traffic_guarantee_weaken.ground  traffic_guarantee_weakensaved_CS1.txt  traffic_guarantee_weakensaved_CS2.txt  traffic_guarantee_weakensaved_CS3.txt  traffic_guarantee_weakensaved_CS5.txt  traffic_single.answer_set  traffic_single_guarantee.answer_set  traffic_single_guarantee_simple.answer_set  updated-doorexample.xml  updated-test-2xml.xml
scripts/: choices_walker.py  main.py  process_statistics.py  repair_spec.py  visualise_resulting_specs.py  visualise_tree.py
spec_repair/: config.py  enums.py  exceptions.py  heuristics.py  ltl.py  main_repair.py  old_experiments.py  special_types.py
tests/: test_Specification.py  test_choices_walker.py  test_ltl.py  test_regex.py  test_repair_spec.py  test_spec_util.py  test_violation_listener.py
(+2136 files in other folders)
