[metadata]
name = spec_repair
version = 1.0
author = TiberiuGeorgescu
author_email = tibi.geo@ic.ac.uk
description = A repair algorithm for LTL-based specificaitons in Spectra
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TibiGG/SpectraASPTranslators
classifiers =
    Programming Language :: Python :: 3
    Operating System :: MacOS
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = spec_repair